force-app/main/default/objects/Unit__c/Unit__c.object-meta.xml
<CustomObject>
    <description>Object to manage all the Units for users in system, to enable them to view the details and sell them.</description>
    <label>Unit</label>
    <nameField>
        <label>Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>