force-app/main/default/objects/Unit__c/fields/ActualContractorHandoverDate__c.field-meta.xml
<CustomField>
    <fullName>ActualContractorHandoverDate__c</fullName>
    <description>For capturing the Actual Contractor Handover Date of the Unit</description>
    <label>Actual Contractor Handover Date</label>
    <type>Date</type>
</CustomField>