force-app/main/default/objects/Unit__c/fields/ActualCustomerHandoverDate__c.field-meta.xml
<CustomField>
    <fullName>ActualCustomerHandoverDate__c</fullName>
    <description>For capturing the Actual Customer Handover Date of the Unit</description>
    <label>Actual Customer Handover Date</label>
    <type>Date</type>
</CustomField>