force-app/main/default/objects/Unit__c/fields/ADDC_Address__c.field-meta.xml
<CustomField>
    <fullName>ADDC_Address__c</fullName>
    <label>ADDC Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>