force-app/main/default/objects/Unit__c/fields/ADDCMeter__c.field-meta.xml
<CustomField>
    <fullName>ADDCMeter__c</fullName>
    <description>For capturing the ADDC Meter 1 of the Unit</description>
    <label>ADDC Meter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>