force-app/main/default/objects/Unit__c/fields/ADDCPremiseId__c.field-meta.xml
<CustomField>
    <fullName>ADDCPremiseId__c</fullName>
    <description>For capturing the ADDC Premise Id 1 of the Unit</description>
    <label>ADDC Premise Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>