force-app/main/default/objects/Unit__c/fields/ADMArabicSectorName__c.field-meta.xml
<CustomField>
    <fullName>ADMArabicSectorName__c</fullName>
    <description>For capturing the ADM ARB Sector Name of the Unit</description>
    <label>ADM Arabic Sector Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>