force-app/main/default/objects/Unit__c/fields/ADMBuildingNumber__c.field-meta.xml
<CustomField>
    <fullName>ADMBuildingNumber__c</fullName>
    <description>For capturing the ADM Building Number of the Unit</description>
    <label>ADM Building Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>