force-app/main/default/objects/Unit__c/fields/ADMFloorNumber__c.field-meta.xml
<CustomField>
    <fullName>ADMFloorNumber__c</fullName>
    <description>For capturing the ADM Floor Number of the Unit</description>
    <label>ADM Floor Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>