force-app/main/default/objects/Unit__c/fields/ADMPlotNumber__c.field-meta.xml
<CustomField>
    <fullName>ADMPlotNumber__c</fullName>
    <description>For capturing the ADM Plot Number of the Unit</description>
    <label>ADM Plot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>