force-app/main/default/objects/Unit__c/fields/ADMSectorName__c.field-meta.xml
<CustomField>
    <fullName>ADMSectorName__c</fullName>
    <description>For capturing the ADM Sector Name of the Unit</description>
    <label>ADM Sector Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>