force-app/main/default/objects/Unit__c/fields/ADMUnitNumber__c.field-meta.xml
<CustomField>
    <fullName>ADMUnitNumber__c</fullName>
    <description>For capturing the ADM Unit Number of the Unit</description>
    <label>ADM Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>