force-app/main/default/objects/Unit__c/fields/ADMZone__c.field-meta.xml
<CustomField>
    <fullName>ADMZone__c</fullName>
    <description>For capturing the ADM Zone of the Unit</description>
    <label>ADM Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>