force-app/main/default/objects/Unit__c/fields/ADMZoneArabic__c.field-meta.xml
<CustomField>
    <fullName>ADMZoneArabic__c</fullName>
    <description>For capturing the ADM Zone (Arabic)of the Unit</description>
    <label>ADM Zone (Arabic)</label>
    <type>TextArea</type>
</CustomField>