force-app/main/default/objects/Unit__c/fields/AffectionPlan__c.field-meta.xml
<CustomField>
    <fullName>AffectionPlan__c</fullName>
    <description>For capturing the Affection Plan of the Unit</description>
    <label>Affection Plan</label>
    <type>Url</type>
</CustomField>