force-app/main/default/objects/Unit__c/fields/AnticipatedServiceCharges__c.field-meta.xml
<CustomField>
    <fullName>AnticipatedServiceCharges__c</fullName>
    <description>For capturing the Anticipated Service Charges of the Unit</description>
    <label>Anticipated Service Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>