force-app/main/default/objects/Unit__c/fields/AreaUOM__c.field-meta.xml
<CustomField>
    <fullName>AreaUOM__c</fullName>
    <description>For capturing the Area UOM of the Unit</description>
    <label>Area UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SQM</fullName>
            </value>
            <value>
                <fullName>SQFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>