force-app/main/default/objects/Unit__c/fields/AspectView__c.field-meta.xml
<CustomField>
    <fullName>AspectView__c</fullName>
    <label>Aspect View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>