force-app/main/default/objects/Unit__c/fields/AssignedToUser__c.field-meta.xml
<CustomField>
    <fullName>AssignedToUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For capturing the Assigned To User of the Unit</description>
    <label>Assigned To User</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Sales Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PropertiesAssignedTo</relationshipName>
    <type>Lookup</type>
</CustomField>