force-app/main/default/objects/Unit__c/fields/Azure_User__c.field-meta.xml
<CustomField>
    <fullName>Azure_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Azure User</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>