force-app/main/default/objects/Unit__c/fields/Back_to_Back__c.field-meta.xml
<CustomField>
    <fullName>Back_to_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back to Back</label>
    <type>Checkbox</type>
</CustomField>