force-app/main/default/objects/Unit__c/fields/Backup_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Backup_Unit_Code__c</fullName>
    <label>Backup Unit Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>