force-app/main/default/objects/Unit__c/fields/Block_Till__c.field-meta.xml
<CustomField>
    <fullName>Block_Till__c</fullName>
    <label>Block Till</label>
    <type>DateTime</type>
</CustomField>