force-app/main/default/objects/Unit__c/fields/BlockedBy__c.field-meta.xml
<CustomField>
    <fullName>BlockedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For capturing the Blocker For of the Unit</description>
    <label>Requested/Blocked For</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PropertiesBlockedBy</relationshipName>
    <type>Lookup</type>
</CustomField>