force-app/main/default/objects/Unit__c/fields/BlockedComments__c.field-meta.xml
<CustomField>
    <fullName>BlockedComments__c</fullName>
    <description>For capturing the Blocked Comments of the Unit</description>
    <label>Blocked Comments</label>
    <length>1072</length>
    <type>LongTextArea</type>
</CustomField>