force-app/main/default/objects/Unit__c/fields/BlockedDate__c.field-meta.xml
<CustomField>
    <fullName>BlockedDate__c</fullName>
    <description>For capturing the Blocked Date of the Unit</description>
    <label>Blocked Date</label>
    <type>DateTime</type>
</CustomField>