force-app/main/default/objects/Unit__c/fields/BlockedForCustomer__c.field-meta.xml
<CustomField>
    <fullName>BlockedForCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For capturing the Blocked For Customer of the Unit</description>
    <label>Blocked For Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>PropertiesBlockedForCustomer</relationshipName>
    <type>Lookup</type>
</CustomField>