force-app/main/default/objects/Unit__c/fields/BlockedReason__c.field-meta.xml
<CustomField>
    <fullName>BlockedReason__c</fullName>
    <description>For capturing the Blocked Reason of the Unit</description>
    <label>Blocked Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ONLINE</fullName>
            </value>
            <value>
                <fullName>VIP SALE</fullName>
            </value>
            <value>
                <fullName>SALES</fullName>
            </value>
            <value>
                <fullName>BULK SALE</fullName>
            </value>
            <value>
                <fullName>CANCELLATION-LEGAL RESTRICTION</fullName>
                <color>#FF0000</color>
                <label>CANCELLATION-LEGAL RESTRICTION</label>
            </value>
            <value>
                <fullName>MGMT SALES</fullName>
            </value>
            <value>
                <fullName>DEV RESTRICTION</fullName>
                <color>#FF0000</color>
                <label>DEV RESTRICTION</label>
            </value>
            <value>
                <fullName>MEMO</fullName>
            </value>
            <value>
                <fullName>BROKER</fullName>
            </value>
            <value>
                <fullName>Assignment Request</fullName>
            </value>
            <value>
                <fullName>SALES CANCELLATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>