force-app/main/default/objects/Unit__c/fields/BlockedValidDays__c.field-meta.xml
<CustomField>
    <fullName>BlockedValidDays__c</fullName>
    <description>For capturing the Blocked Valid Days of the Unit</description>
    <label>Blocked Valid Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>