force-app/main/default/objects/Unit__c/fields/BUA__c.field-meta.xml
<CustomField>
    <fullName>BUA__c</fullName>
    <label>Built up area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>