force-app/main/default/objects/Unit__c/fields/CarParkAllocation__c.field-meta.xml
<CustomField>
    <fullName>CarParkAllocation__c</fullName>
    <description>For capturing the Car Park Allocation of the Unit</description>
    <label>Car Park Allocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>