force-app/main/default/objects/Unit__c/fields/CommunityCenter__c.field-meta.xml
<CustomField>
    <fullName>CommunityCenter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommunityCenter</label>
    <type>Checkbox</type>
</CustomField>