force-app/main/default/objects/Unit__c/fields/CommunityCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>CommunityCompanyCode__c</fullName>
    <label>Community Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>