force-app/main/default/objects/Unit__c/fields/CommunitySAPUnitNumber__c.field-meta.xml
<CustomField>
    <fullName>CommunitySAPUnitNumber__c</fullName>
    <label>Community SAP Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>