force-app/main/default/objects/Unit__c/fields/CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CompletionDate__c</fullName>
    <description>For capturing the Completion Date of the Unit</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>