force-app/main/default/objects/Unit__c/fields/CornerUnit__c.field-meta.xml
<CustomField>
    <fullName>CornerUnit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CornerUnit</label>
    <type>Checkbox</type>
</CustomField>