force-app/main/default/objects/Unit__c/fields/Current_Year_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Service_Charge__c</fullName>
    <formula>Current_Year_Reserve_Fund_Service_Charge__c  +  Current_Year_General_Fund_Service_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>