force-app/main/default/objects/Unit__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>For capturing the Description of the Unit</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>