force-app/main/default/objects/Unit__c/fields/Direct_Indirect__c.field-meta.xml
<CustomField>
    <fullName>Direct_Indirect__c</fullName>
    <label>Direct/Indirect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>