force-app/main/default/objects/Unit__c/fields/Draft_Generated_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Draft_Generated_Service_Charge__c</fullName>
    <formula>Draft_GeneratedReserveFundServiceCharge__c  +  Draft_GeneratedGeneralFundServiceCharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Draft Generated Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>