force-app/main/default/objects/Unit__c/fields/Draft_GeneratedGeneralFundServiceCharge__c.field-meta.xml
<CustomField>
    <fullName>Draft_GeneratedGeneralFundServiceCharge__c</fullName>
    <label>Draft GeneratedGeneralFundServiceCharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>