force-app/main/default/objects/Unit__c/fields/Draft_GeneratedReserveFundServiceCharge__c.field-meta.xml
<CustomField>
    <fullName>Draft_GeneratedReserveFundServiceCharge__c</fullName>
    <label>Draft  GeneratedReserveFundServiceCharge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>