force-app/main/default/objects/Unit__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>For capturing the End Date of the Unit</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>