force-app/main/default/objects/Unit__c/fields/EndUnit__c.field-meta.xml
<CustomField>
    <fullName>EndUnit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EndUnit</label>
    <type>Checkbox</type>
</CustomField>