force-app/main/default/objects/Unit__c/fields/ExpectedContractorHandoverDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedContractorHandoverDate__c</fullName>
    <description>For capturing the Expected Contractor Handover Date of the Unit</description>
    <label>Expected Contractor Handover Date</label>
    <type>Date</type>
</CustomField>