force-app/main/default/objects/Unit__c/fields/ExpectedCustomerHandoverDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedCustomerHandoverDate__c</fullName>
    <description>For capturing the Expected Customer Handover Date of the Unit</description>
    <label>Expected Customer Handover Date</label>
    <type>Date</type>
</CustomField>