force-app/main/default/objects/Unit__c/fields/External_Saleable_Area__c.field-meta.xml
<CustomField>
    <fullName>External_Saleable_Area__c</fullName>
    <label>External Saleable Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>