force-app/main/default/objects/Unit__c/fields/GarageArea__c.field-meta.xml
<CustomField>
    <fullName>GarageArea__c</fullName>
    <description>For capturing the Garage Area of the Unit</description>
    <label>Garage Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>