force-app/main/default/objects/Unit__c/fields/Garden_View__c.field-meta.xml
<CustomField>
    <fullName>Garden_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garden View</label>
    <type>Checkbox</type>
</CustomField>