force-app/main/default/objects/Unit__c/fields/GFAArea__c.field-meta.xml
<CustomField>
    <fullName>GFAArea__c</fullName>
    <description>For capturing the GFA Area of the Unit</description>
    <label>GFA Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>