force-app/main/default/objects/Unit__c/fields/GIS_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>GIS_Object_Id__c</fullName>
    <label>GIS Object Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>