force-app/main/default/objects/Unit__c/fields/Handover_Status__c.field-meta.xml
<CustomField>
    <fullName>Handover_Status__c</fullName>
    <label>Handover Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready for Handover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>