force-app/main/default/objects/Unit__c/fields/HandoverZone__c.field-meta.xml
<CustomField>
    <fullName>HandoverZone__c</fullName>
    <description>For capturing the Handover Zone of the Unit</description>
    <label>Handover Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>