force-app/main/default/objects/Unit__c/fields/hasValidSalesorder__c.field-meta.xml
<CustomField>
    <fullName>hasValidSalesorder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasValidSalesorder</label>
    <type>Checkbox</type>
</CustomField>