force-app/main/default/objects/Unit__c/fields/HO_Agent__c.field-meta.xml
<CustomField>
    <fullName>HO_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HO Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>