force-app/main/default/objects/Unit__c/fields/Holding_Days__c.field-meta.xml
<CustomField>
    <fullName>Holding_Days__c</fullName>
    <label>Holding Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>