force-app/main/default/objects/Unit__c/fields/In_Progress_Prior_Status__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Prior_Status__c</fullName>
    <label>In Progress Prior Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>