force-app/main/default/objects/Unit__c/fields/Internal_Saleable_Area__c.field-meta.xml
<CustomField>
    <fullName>Internal_Saleable_Area__c</fullName>
    <label>Internal Saleable Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>