force-app/main/default/objects/Unit__c/fields/InventoryCategory__c.field-meta.xml
<CustomField>
    <fullName>InventoryCategory__c</fullName>
    <description>For capturing the Inventory Category of the Unit</description>
    <label>Inventory Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>