force-app/main/default/objects/Unit__c/fields/Is_Chiller_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Chiller_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Chiller Enabled</label>
    <type>Checkbox</type>
</CustomField>