force-app/main/default/objects/Unit__c/fields/Is_HHO__c.field-meta.xml
<CustomField>
    <fullName>Is_HHO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is HHO</label>
    <type>Checkbox</type>
</CustomField>