force-app/main/default/objects/Unit__c/fields/Is_Lease_Hold__c.field-meta.xml
<CustomField>
    <fullName>Is_Lease_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lease Hold</label>
    <type>Checkbox</type>
</CustomField>