force-app/main/default/objects/Unit__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>For capturing if the unit Is Active</description>
    <formula>(EndDate__c &gt;= Today() || ISBLANK(EndDate__c ) )&amp;&amp; StartDate__c &lt;=Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active ?</label>
    <type>Checkbox</type>
</CustomField>