force-app/main/default/objects/Unit__c/fields/isEnabledMIP__c.field-meta.xml
<CustomField>
    <fullName>isEnabledMIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEnabledMIP</label>
    <type>Checkbox</type>
</CustomField>