force-app/main/default/objects/Unit__c/fields/Lake_View__c.field-meta.xml
<CustomField>
    <fullName>Lake_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lake View</label>
    <type>Checkbox</type>
</CustomField>