force-app/main/default/objects/Unit__c/fields/Landscape_View__c.field-meta.xml
<CustomField>
    <fullName>Landscape_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landscape View</label>
    <type>Checkbox</type>
</CustomField>