force-app/main/default/objects/Unit__c/fields/Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status__c</fullName>
    <label>Legal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With Legal</fullName>
            </value>
            <value>
                <fullName>Case Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>