force-app/main/default/objects/Unit__c/fields/LockedBy__c.field-meta.xml
<CustomField>
    <fullName>LockedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For capturing the Locked By of the Unit</description>
    <label>Locked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UnitsLockedBy</relationshipName>
    <type>Lookup</type>
</CustomField>