force-app/main/default/objects/Unit__c/fields/LockExpiryTime__c.field-meta.xml
<CustomField>
    <fullName>LockExpiryTime__c</fullName>
    <description>For capturing the Lock Expiry Time of the Unit</description>
    <label>Lock Expiry Time</label>
    <type>DateTime</type>
</CustomField>