force-app/main/default/objects/Unit__c/fields/LockTime__c.field-meta.xml
<CustomField>
    <fullName>LockTime__c</fullName>
    <description>For capturing the Lock Time of the Unit</description>
    <label>Lock Time</label>
    <type>DateTime</type>
</CustomField>