force-app/main/default/objects/Unit__c/fields/MainRoadProximity__c.field-meta.xml
<CustomField>
    <fullName>MainRoadProximity__c</fullName>
    <description>For capturing the Main Road Proximity of the Unit</description>
    <label>Main Road Proximity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>