force-app/main/default/objects/Unit__c/fields/MarketingPlan__c.field-meta.xml
<CustomField>
    <fullName>MarketingPlan__c</fullName>
    <description>For capturing the Marketing Plan of the Unit</description>
    <label>Marketing Plan</label>
    <type>Url</type>
</CustomField>