force-app/main/default/objects/Unit__c/fields/MarketLeaseRent__c.field-meta.xml
<CustomField>
    <fullName>MarketLeaseRent__c</fullName>
    <description>Used for PM Fee Calculation</description>
    <label>Market Lease Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>