force-app/main/default/objects/Unit__c/fields/MarketPrice__c.field-meta.xml
<CustomField>
    <fullName>MarketPrice__c</fullName>
    <description>For capturing the Market Price of the Unit</description>
    <label>Market Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>