force-app/main/default/objects/Unit__c/fields/MeasuredArea__c.field-meta.xml
<CustomField>
    <fullName>MeasuredArea__c</fullName>
    <description>For capturing the Measured Area of the Unit</description>
    <label>Measured Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>