force-app/main/default/objects/Unit__c/fields/MeasuredInternalArea__c.field-meta.xml
<CustomField>
    <fullName>MeasuredInternalArea__c</fullName>
    <description>For capturing the Measured Internal Area of the Unit</description>
    <label>Measured Internal Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>