force-app/main/default/objects/Unit__c/fields/MeasuredUtilitiesArea__c.field-meta.xml
<CustomField>
    <fullName>MeasuredUtilitiesArea__c</fullName>
    <description>For capturing the Measured Utilities Area of the Unit</description>
    <label>Measured Utilities Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>