force-app/main/default/objects/Unit__c/fields/MosqueProximity__c.field-meta.xml
<CustomField>
    <fullName>MosqueProximity__c</fullName>
    <description>For capturing the Plot Mosque Proximity of the Unit</description>
    <label>Mosque Proximity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>