force-app/main/default/objects/Unit__c/fields/NeighbourhoodPark__c.field-meta.xml
<CustomField>
    <fullName>NeighbourhoodPark__c</fullName>
    <description>For capturing the Plot Neighborhood Park of the Unit</description>
    <label>Neighborhood Park</label>
    <length>255</length>
    <type>Text</type>
</CustomField>