force-app/main/default/objects/Unit__c/fields/New_Villa_No__c.field-meta.xml
<CustomField>
    <fullName>New_Villa_No__c</fullName>
    <label>New Villa No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>