force-app/main/default/objects/Unit__c/fields/Number_Of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Guests__c</fullName>
    <formula>CASE(
    TEXT(UnitModel__c),
    &quot;Studio&quot;, 3,
    &quot;1BHK&quot;, 4,
    &quot;2BHK&quot;, 6,
    &quot;3BHK&quot;, 9,
    &quot;4BHK&quot;, 12,
    &quot;5BHK&quot;, 15,
    &quot;6BHK&quot;, 18,
    &quot;7BHK&quot;, 21,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>