force-app/main/default/objects/Unit__c/fields/NumberOfAdditionalCarParks__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAdditionalCarParks__c</fullName>
    <description>For capturing the Number of Additional Car Parks of the Unit</description>
    <label>Number of Additional Car Parks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>