force-app/main/default/objects/Unit__c/fields/NumberOfBalcony__c.field-meta.xml
<CustomField>
    <fullName>NumberOfBalcony__c</fullName>
    <description>For capturing the Number of Balcony of the Unit</description>
    <label>Number of Balcony</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>