force-app/main/default/objects/Unit__c/fields/NumberOfBathrooms__c.field-meta.xml
<CustomField>
    <fullName>NumberOfBathrooms__c</fullName>
    <description>For capturing the Number of Bathrooms of the Unit</description>
    <label>Number of Bathrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>