force-app/main/default/objects/Unit__c/fields/NumberOfBedrooms__c.field-meta.xml
<CustomField>
    <fullName>NumberOfBedrooms__c</fullName>
    <description>For capturing the Number of Bedrooms of the Unit</description>
    <label>Number of Bedrooms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>