force-app/main/default/objects/Unit__c/fields/NumberOfCarParks__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCarParks__c</fullName>
    <label>Number of Car Parks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>