force-app/main/default/objects/Unit__c/fields/NumberOfMaidRooms__c.field-meta.xml
<CustomField>
    <fullName>NumberOfMaidRooms__c</fullName>
    <description>For capturing the Number of Maid Rooms of the Unit</description>
    <label>Number of Maid Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>