force-app/main/default/objects/Unit__c/fields/NumberOfStoreRooms__c.field-meta.xml
<CustomField>
    <fullName>NumberOfStoreRooms__c</fullName>
    <description>For capturing the Number of Store Rooms of the Unit</description>
    <label>Number of Store Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>