force-app/main/default/objects/Unit__c/fields/NumberOfStudyRooms__c.field-meta.xml
<CustomField>
    <fullName>NumberOfStudyRooms__c</fullName>
    <description>For capturing the Number of Study Rooms of the Unit</description>
    <label>Number of Study Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>