force-app/main/default/objects/Unit__c/fields/Occupancy_Type__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Type__c</fullName>
    <label>Occupancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>