force-app/main/default/objects/Unit__c/fields/Old_Villa_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Villa_Name__c</fullName>
    <label>Old Villa Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>