force-app/main/default/objects/Unit__c/fields/OnlineBrokerFlag__c.field-meta.xml
<CustomField>
    <fullName>OnlineBrokerFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For capturing the Online Broker Flag of the Unit</description>
    <label>Online Broker Flag</label>
    <type>Checkbox</type>
</CustomField>